Replace deprecated Integer(String)